Render as camera not matching view #60558

Closed
opened 2019-01-16 10:07:34 +01:00 by Cédric · 13 comments
Member

System Information
Win 10
I7-5820K
GTX1080 ti

Blender Version
Broken: 2.80, 84c06e996a, 2019-01-14
Worked: 2.79

Short description of error
When using an object as camera in cycles, the render isn't matching the view and the overlays.

Exact steps for others to reproduce the error
Open the blend file and enable the render engine.
2019-01-16_10-02-26.gif

RenderAsCamera.blend

**System Information** Win 10 I7-5820K GTX1080 ti **Blender Version** Broken: 2.80, 84c06e996a7a, 2019-01-14 Worked: 2.79 **Short description of error** When using an object as camera in cycles, the render isn't matching the view and the overlays. **Exact steps for others to reproduce the error** Open the blend file and enable the render engine. ![2019-01-16_10-02-26.gif](https://archive.blender.org/developer/F6304092/2019-01-16_10-02-26.gif) [RenderAsCamera.blend](https://archive.blender.org/developer/F6304082/RenderAsCamera.blend)
Author
Member

Added subscriber: @Clarkx

Added subscriber: @Clarkx
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

You are talking about this weird big cube, right?
Checking...

You are talking about this weird big cube, right? Checking...
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

@brecht, why can arbitrary objects be used as camera in the first place?

@brecht, why can arbitrary objects be used as camera in the first place?

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Setting lights as a camera can be useful sometimes if you want to see what the light is hitting. I have, however, never seen anyone use normal objects as a camera. It is indeed rather strange that we support this.

Setting lights as a camera can be useful sometimes if you want to see what the light is hitting. I have, however, never seen anyone use normal objects as a camera. It is indeed rather strange that we support this.
Author
Member

Yes, it's exactly that. It's useful to target an object quickly, think of a light or a reflector for bouncing light in shadow areas.

Yes, it's exactly that. It's useful to target an object quickly, think of a light or a reflector for bouncing light in shadow areas.
Member

I see, feels like this functionality should be separate from setting an object as scene camera.

I see, feels like this functionality should be separate from setting an object as scene camera.

We could constrain this to only lights and cameras?

We could constrain this to only lights and cameras?

The "Set Active Object as Camera" operator could indeed refuse to work for anything but cameras and lights.

The "Set Active Object as Camera" operator could indeed refuse to work for anything but cameras and lights.

This issue was referenced by 260b786d07

This issue was referenced by 260b786d0724fc115c1b9920acbbfb04a5fc6cf8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60558
No description provided.