Fix T60558: Cycles viewport render mismatch when the camera is a light.